--- a/appsettings.json
+++ b/appsettings.json
@@ -4,7 +4,7 @@
 			"Default":"Warning"
 		}
 	},
-	"ConnectionStrings":{
-		"csOltas":"Data Source=(LocalDB)\\MSSQLLocalDB;AttachDbFilename=C:\\Users\\kovac\\oltas.mdf;Integrated Security=True;Connect Timeout=30"
+	"ConnectionStrings": {
+		"csOltas": "Data Source=(LocalDB)\\MSSQLLocalDB;AttachDbFilename=C:\\Users\\kovac\\source\\repos\\VP_Beadando\\oltas.mdf;Integrated Security=True;Connect Timeout=30"
 	}
 }
